# Copyright 2015 Brian Smith.
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHORS DISCLAIM ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

[package]
categories = ["cryptography", "no-std"]
description = "Web PKI X.509 Certificate Verification."
edition = "2021"
rust-version = "1.61"
license = "ISC"
name = "rustls-webpki"
readme = "README.md"
repository = "https://github.com/rustls/webpki"
version = "0.102.0-alpha.4"

include = [
    "Cargo.toml",

    "/LICENSE",
    "README.md",

    "src/aws_lc_rs_algs.rs",
    "src/calendar.rs",
    "src/cert.rs",
    "src/crl/mod.rs",
    "src/crl/types.rs",
    "src/der.rs",
    "src/end_entity.rs",
    "src/error.rs",
    "src/subject_name/dns_name.rs",
    "src/subject_name/ip_address.rs",
    "src/subject_name/mod.rs",
    "src/subject_name/name.rs",
    "src/subject_name/verify.rs",
    "src/name/verify.rs",
    "src/name/name.rs",
    "src/signed_data.rs",
    "src/ring_algs.rs",
    "src/alg_tests.rs",
    "src/time.rs",
    "src/trust_anchor.rs",
    "src/x509.rs",
    "src/verify_cert.rs",
    "src/lib.rs",

    "src/data/**/*",

    "tests/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "webpki"

[features]
#default = ["std", "ring", "rust_crypto"]
default = ["std", "rust_crypto"]
alloc = ["ring?/alloc", "pki-types/alloc"]
aws_lc_rs = ["dep:aws-lc-rs"]
ring = ["dep:ring"]
std = ["alloc"]
rust_crypto = ["signature", "ed25519-dalek", "ecdsa", "p256", "p384", "const-oid", "der", "rsa", "getrandom"]

[dependencies]
pki-types = { package = "rustls-pki-types", version = "0.2.1", default-features = false }
untrusted = "0.9"

signature = { version = "2.1", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
ecdsa = { version = "0.16", features = ["digest", "sha2"], optional = true }
p256 = { version = "0.13", features = ["ecdsa", "sha256", "digest"], optional = true }
p384 = { version = "0.13", optional = true }
const-oid = { version = "0.9", optional = true }
der = { version = "0.7", optional = true }
rsa = { version = "0.9", features = ["sha2"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

aws-lc-rs = { version = "1.0.0", optional = true }
ring = { version = "0.17", default-features = false, optional = true }

[dev-dependencies]
base64 = "0.21"
bencher = "0.1.5"
once_cell = "1.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-test = "0.3"
x509-cert = "0.2"

# TODO(XXX): Switch rcgen back to default-features=false after rcgen#1498 is fixed.
#rcgen = { version = "0.11.2", features = ["pem"] }
[dev-dependencies.rcgen]
git = "https://github.com/wireapp/rcgen"
tag = "v1.2.2-pre.core-crypto-0.7.0"
version = "=0.9.2"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
bzip2 = "0.4.4"
[target.'cfg(target_family = "wasm")'.dev-dependencies]
bzip2-rs = "0.1"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bench]]
name = "benchmarks"
path = "benches/benchmark.rs"
harness = false

[patch.crates-io.pki-types]
package = "rustls-pki-types"
path = "../pki-types"